2023-11-08T08:12:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6795446405 # 2058
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-08
* notice: last 14d: unq all: 33 72
* notice: prev accum: outdated-unq outdated-all / unq all: 1881 5655 / 1931 5727
* notice: next accum: outdated-unq outdated-all / unq all: 1881 5655 / 1932 5728
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-25 2023-11-08]

2023-11-08T00:43:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6792171197 # 2057
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-08
* notice: last 14d: unq all: 33 72
* notice: prev accum: outdated-unq outdated-all / unq all: 1875 5647 / 1931 5727
* notice: next accum: outdated-unq outdated-all / unq all: 1881 5655 / 1931 5727
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-24] / []

2023-11-07T16:17:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6787224864 # 2056
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-07
* notice: last 14d: unq all: 33 73
* notice: prev accum: outdated-unq outdated-all / unq all: 1875 5647 / 1910 5698
* notice: next accum: outdated-unq outdated-all / unq all: 1875 5647 / 1931 5727
* notice: prev exec diff / last date diff / accum: unq all: +21 +29 -5 -7 / +21 +29 -0 -0 / 21 29
* notice: removed / changed dates: [] / [2023-10-24 2023-11-07]

2023-11-07T00:44:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6778411962 # 2054