@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-11-08T08:12:31Z",
+  "timestamp" : "2023-11-08T16:12:19Z",
   "count_outdated" : 5655,
   "uniques_outdated" : 1881,
-  "count" : 5728,
+  "count" : 5729,
   "uniques" : 1932,
   "clones" : [
     {
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-11-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
