@@ -1,5 +1,5 @@
 {
-  "count": 72,
+  "count": 73,
   "uniques": 33,
   "clones": [
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-11-08T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
