@@ -1,3 +1,12 @@
+2023-11-08T16:12:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6800948615 # 2059
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-08
+* notice: last 14d: unq all: 33 73
+* notice: prev accum: outdated-unq outdated-all / unq all: 1881 5655 / 1932 5728
+* notice: next accum: outdated-unq outdated-all / unq all: 1881 5655 / 1932 5729
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-11-08]
+
 2023-11-08T08:12:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6795446405 # 2058
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-08
